--- a/PAIRS.properties
+++ b/PAIRS.properties
@@ -68,7 +68,7 @@ ALL_trailing_profit = 0.2614
 ALL_DCA_enabled = -0.90
 #---------------------------------------------------------------
 
-#ALL_rebuy_timeout = 15
+ALL_rebuy_timeout = 15
 
 #set this if you want to stop loss at a certain %
 All_stop_loss_trigger = 0
@@ -78,10 +78,3 @@ BNBBTC_trading_Enabled = false
 ALL_HIDDEN_PAIRS = BNBBTC
 
 #--------------------------------------------------------
-
-EOSBTC_DCA_enabled = false
-ETCBTC_DCA_enabled = false
-NEOBTC_DCA_enabled = false
-XMRBTC_DCA_enabled = false
-LRCBTC_DCA_enabled = false
-
