--- a/PAIRS.properties
+++ b/PAIRS.properties
@@ -17,7 +17,7 @@ ALL_enabled_pairs= ALL
 
 
 #THIS IS THE PRICE IN BTC YOU WILL MAKE THE FIRST BUY AT
-ALL_max_cost = 0.0018
+ALL_max_cost = 0.0015
 #ALL_max_cost_percentage = 
 
 #THIS IS THE MINIMUM VALUE OF ANY COIN THAT YOU WOULD LIKE TO TRADE
@@ -32,13 +32,13 @@ ALL_min_buy_balance = 0
 
 #THIS IS THE AMOUNT OF COINS YOU WANT TO TRADE AT ONCE (START SMALL)
 
-ALL_max_trading_pairs = 25
+ALL_max_trading_pairs = 20
 
 #This prevents the bot from buying low Satoshi coins--AKA PUMPS
 #ALL_min_buy_price = 0.0005
 
 #Max spread % between lowest ask and highest bid to allow a new buy order if spread is too big, most likely there was a coin dump/pump and you are buying too high
-ALL_max_buy_spread = 2
+ALL_max_buy_spread = 0.85
 
 #If x amount of time in minutes has passed since we bought a coin, create a pending order for that pair.
 #ALL_pending_order_wait_time = 2880
@@ -52,23 +52,22 @@ ALL_sell_only_mode = false
 #THIS IS OUR BUY STRATEGY
 
 ALL_buy_strategy = LOWBB
-ALL_buy_value = 0
-ALL_trailing_buy = 0.2499
+ALL_buy_value = -10
+ALL_trailing_buy = 0.03
 #All_buy_available_volume_trigger = 100
 
 #---------------------------------------------------------------
 #THIS IS OUR SELL STRATEGY
 ALL_sell_strategy = GAIN
-ALL_sell_value = 0.7331
-#ALL_min_profit = 0.6331
-ALL_trailing_profit = 0.2614
+ALL_sell_value = 0.50
+ALL_trailing_profit = 0.061
 
 #---------------------------------------------------------------
 #Enable DCA for all pairs with a balance
 ALL_DCA_enabled = -0.90
 #---------------------------------------------------------------
 
-ALL_rebuy_timeout = 15
+#ALL_rebuy_timeout = 15
 
 #set this if you want to stop loss at a certain %
 All_stop_loss_trigger = 0
